<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="G_Output" Id="{393b3012-cae2-45bd-a497-9c5c354eafb2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	sModeDisplay : STRING;
	bGreenLed : BOOL;
	bRedLed : BOOL;
	fOpenLoopControlOutput : LREAL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>