<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="P_CraneControl" Id="{a9f0b871-a372-4028-9baa-1603f14d2aaa}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_CraneControl
VAR
	fbTime		:	FB_Clock;
	fbSetMode	:	FB_SetMode;
	eMode 		:	E_Mode;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

fbTime
(
	bStart := G_Input.bStartSwitch,
	bStop := G_Input.bStopSwitch,
	fCycleTime := G_Parameter.fCycleTime,
	fTimeInSeconds => G_Parameter.fTime
	
);
	
fbSetMode
(
	bPower := G_Input.bPoweSwitch,
	bOn := G_Input.bOnOffSwitch,
	bMode := G_Input.bModeSwitch,
	bStart := G_Input.bStartSwitch,
	bStop := G_Input.bStopSwitch,
	eMode => G_Parameter.eMode,
	bGreenLight => G_Output.bGreenLed,
	bRedLight => G_Output.bRedLed,
	sMode => G_Output.sModeDisplay	
);


IF G_Input.bPoweSwitch = FALSE OR G_Input.bOnOffSwitch = FALSE OR G_Input.bStopSwitch = TRUE THEN
	G_Input.bStartSwitch := FALSE;
	G_Input.bStopSwitch := FALSE;
END_IF




]]></ST>
    </Implementation>
    <LineIds Name="P_CraneControl">
      <LineId Id="34" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="10" Count="2" />
      <LineId Id="41" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="28" Count="3" />
      <LineId Id="43" Count="0" />
      <LineId Id="54" Count="1" />
      <LineId Id="45" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="64" Count="2" />
      <LineId Id="63" Count="0" />
      <LineId Id="47" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>